auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-auth-service
  template:
    metadata:
      labels:
        app: go-auth-service
    spec:
      containers:
      - name: hello-py
        image: dharlequin/go-auth-service:v5
        ports:
        - name: web
          containerPort: 8181
