auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: go-auth-service
  ports:
  - protocol: TCP
    port: 9000
    targetPort: web
  type: NodePort
