auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /login
          pathType: Exact
          backend:
            service:
              name: auth-service
              port:
                number: 9000
        - path: /logout
          pathType: Exact
          backend:
            service:
              name: auth-service
              port:
                number: 9000
        - path: /register
          pathType: Exact
          backend:
            service:
              name: auth-service
              port:
                number: 9000
        - path: /auth
          pathType: Exact
          backend:
            service:
              name: auth-service
              port:
                number: 9000
        - path: /sign-in
          pathType: Exact
          backend:
            service:
              name: auth-service
              port:
                number: 9000
